# master_thesis

XML_examples/: OpcUaDiModel.xml  example1.xml
code_generated/: kessy.c  kessy.h  kessy2.c  kessy2.h
keyless_entry/: BCM.cpp  CMakeLists.txt  InputArguments.cpp  InputArguments.h  Publisher.cpp  Publisher.h  UID_key.cpp  UserInput.cpp  UserInput.h  common_structures.h  door_handle.cpp  door_modules.cpp  kessy_io.cpp  main.cpp
opcua-animal-cs/Published/animal1/: animal.NodeIds.csv
opcua-animal-cs/Published/animal4/: animal.NodeIds.csv  keylessEntry.NodeIds.csv
open62541/examples/: CMakeLists.txt
open62541/examples/pubsub/: publish.c  pubsub_subscribe_standalone.c  tutorial_pubsub_publish.c  tutorial_pubsub_subscribe.c
